tests/hevm/fail/unspecced_storage/unspecced_storage.act
contract A

constructor()

iff

  CALLVALUE == 0

creates

  mapping (uint=>uint) x := []

transition f() : uint256

// fails to mention the state update

storage
returns

  1
